--- a/.gitignore
+++ b/.gitignore
@@ -4,11 +4,9 @@ __pycache__/
 *$py.class
 *.so
 .Python
-
-# 가상환경
 venv/
-env/
 ENV/
+env/
 .venv
 
 # IDE
@@ -16,17 +14,23 @@ ENV/
 .idea/
 *.swp
 *.swo
-*~
 
 # OS
 .DS_Store
 Thumbs.db
 
-# 환경 변수
-.env
-.env.local
-
-# 캐시
-.cache/
+# Logs
 *.log
+
+# Distribution / packaging
+dist/
+build/
+*.egg-info/
+
+# PyTorch
+*.pth
+*.pt
+
+# Model cache
+.cache/
 
